--- a/WorkspaceYS/Estilos.css
+++ b/WorkspaceYS/Estilos.css
@@ -1,9 +1,32 @@
 .contenedor{
     margin: 0;
-    
+    padding: 0;
     box-sizing: border-box;
 }
 
 .barra{
     background-color: aquamarine;
+    font-family: sans-serif;
+    font-size: 1.5rem;
+    padding: 5px;
+
+    .lista-herramientas{
+        list-style-type: none;
+        display: flex;
+        column-gap: 15px;
+
+        a{
+            text-decoration: none;
+        }
+
+        .languages{
+            size: 28px;
+            font-size: 1.5rem;
+            margin-left: auto;
+        }
+    }
+
+   
 }
+
+   
