--- a/WorkspaceYS/Estilos.css
+++ b/WorkspaceYS/Estilos.css
@@ -5,28 +5,52 @@
 }
 
 .barra{
-    background-color: aquamarine;
+    
     font-family: sans-serif;
     font-size: 1.5rem;
     padding: 5px;
+    color: black;
+    font-weight: bold;
+    border-bottom: 2px solid grey;
+   
 
     .lista-herramientas{
         list-style-type: none;
         display: flex;
-        column-gap: 15px;
+        column-gap: 25px;
+        align-items: center;
+        padding-left: 15px;
 
         a{
             text-decoration: none;
+            color: black;
         }
 
         .languages{
-            size: 28px;
-            font-size: 1.5rem;
+           
+            justify-content: center;
             margin-left: auto;
+            margin-right: 35px;
+
+            #lang{
+                font-size: 18px;
+                padding: 8px;
+            }
         }
     }
 
    
+}
+
+#logo{
+    width: 150px;
+    height: 50px;
+}
+
+#imagen-fondo{
+    width: 1000px;
+    margin: auto;
+    
 }
 
    
