--- a/WorkspaceYS/Estilos.css
+++ b/WorkspaceYS/Estilos.css
@@ -23,7 +23,7 @@
         align-items: center;
         padding-left: 15px;
 
-        a{
+        .barra-list{
             text-decoration: none;
             color: black;
         }
@@ -41,7 +41,31 @@
         }
     }
 
-    
+    .dropdownMenu{
+        position: relative;
+        display: inline-block;
+    }
+
+    .list{
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .item-menu{
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      
+    }
+
+    .lista-herramientas li:hover .dropdownMenu {
+        display: block;
+    }
 
    
 }
