--- a/WorkspaceYS/Estilos.css
+++ b/WorkspaceYS/Estilos.css
@@ -4,75 +4,74 @@
     box-sizing: border-box;
 }
 
-.barra{
-    position: fixed;
-    width: 100%;
-    background-color: white;
-    font-family: sans-serif;
-    font-size: 1.5rem;
-    padding: 5px;
-    color: black;
-    font-weight: bold;
-    border-bottom: 2px solid grey;
-   
-
-    .lista-herramientas{
-        list-style-type: none;
-        display: flex;
-        column-gap: 30px;
-        align-items: center;
-        padding-left: 15px;
-
-        .barra-list{
-            text-decoration: none;
-            color: black;
-        }
-
-        .languages{
-           
-            justify-content: center;
-            margin-left: auto;
-            margin-right: 45px;
-
-            #lang{
-                font-size: 18px;
-                padding: 8px;
-            }
-        }
-    }
-
-    .dropdownMenu{
-        position: relative;
-        display: inline-block;
-    }
-
-    .list{
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-    }
-
-    .item-menu{
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-      
-    }
-
-    .lista-herramientas li:hover .dropdownMenu {
-        display: block;
-    }
-
-   
+.barra {
+    background-color: #333;
+    overflow: hidden;
 }
 
-#logo{
-    width: 150px;
-    height: 50px;
+.lista-herramientas {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+.lista-herramientas li {
+    position: relative;
+}
+
+.lista-herramientas a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.lista-herramientas a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Estilos para el logo */
+#logo img {
+    height: 40px;
+    width: auto;
+}
+
+/* Estilos para el menú desplegable */
+.dropdownMenu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.item-menu {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.item-menu:hover {
+    background-color: #ddd;
+}
+
+/* Mostrar el menú desplegable cuando el contenedor padre es hover */
+.lista-herramientas li:hover .dropdownMenu {
+    display: block;
 }
 
 
