--- a/WorkspaceYS/Estilos.css
+++ b/WorkspaceYS/Estilos.css
@@ -72,7 +72,7 @@
 .lista a{
     font-weight: lighter;
     font-size: 1.3rem;
-    padding: 3px;
+    padding: 4px;
     
     
 }
@@ -95,4 +95,16 @@ a {
     width: 100%;
 
 
+}
+
+.banner{
+
+    width: 45%;
+    position: absolute;
+
+    top: 150px;
+    left: 200px;
+    text-align: center;
+    background-color: beige;
+    
 }
