--- a/WorkspaceYS/Estilos.css
+++ b/WorkspaceYS/Estilos.css
@@ -1,4 +1,4 @@
-.contenedor {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,7 +12,7 @@
     font-size: 1.5rem;
     padding: 5px;
     color: black;
-    font-weight: bold;
+    font-weight: lighter;
     border-bottom: 2px solid grey;
 
 
