--- a/WorkspaceYS/Estilos.css
+++ b/WorkspaceYS/Estilos.css
@@ -4,39 +4,98 @@
     box-sizing: border-box;
 }
 
-
-.nav-bar{
-    overflow: hidden;
-    background-color: #333;
+/*Colocamos el header*/
+header {
+    padding: 5px 20px;
     display: flex;
+    position: fixed;
+    top: 0;
     align-items: center;
+    width: 100%;
     justify-content: space-between;
-    padding: 10px 20px;
-   
+    border-bottom: 1px solid rgb(244, 241, 241);
+    z-index: 40;
+    background-color: transparent;
 }
 
-.navigation{
-    justify-content: center;
-    float: left;
-}
 
-.nav{
-    list-style-type: none;
+
+.lista-links {
+
+    font-family: "Lora", serif;
+    font-size: large;
+    font-weight: 400;
+
+    font-style: normal;
+    display: flex;
     text-align: center;
+
+    padding: 10px 20px;
+    list-style-type: none;
+
+}
+
+.lang{
+    padding-right: 20px;
+}
+
+#lang {
+   font-size: 1rem;
+   padding: 5px;
+    
 }
 
 
-.nav-bar a{
-    
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    
-    padding: 14px 16px;
+
+
+.lista {
+    list-style-type: none;
+}
+
+.lista-links a,
+.lista a {
     text-decoration: none;
 }
 
-.nav-bar a:hover{
-    color: aquamarine;
+.lista-links a {
+    display: inline-block;
+    padding: 15px;
+    color: black;
+
+}
+
+.drop-down {
+    display: none;
+    position: absolute;
+    color: black;
+
+    padding: 10px;
+    background-color: white;
+    box-shadow: 1px 1px rgb(244, 241, 241);
+    ;
+}
+
+.links-nav:hover .drop-down {
+    display: block;
+}
+
+
+.links-nav a:hover {
+    font-weight: 900;
+    color: rgb(165, 198, 191);
+
+
+    transition: 0.5s;
+
+
+}
+
+.fondo-principal{
+   
+}
+
+.foto{
+   
+    
     
 }
